--- a/DepartmentManagement/Views/Department/Index.cshtml
+++ b/DepartmentManagement/Views/Department/Index.cshtml
@@ -34,6 +34,9 @@
                                 <p>
                                     @item.Address
                                 </p>
+                                <p>
+                                    @item.EmailAddress
+                                </p>
                             </div>
 
                             <div class="card-footer">
