--- a/DepartmentManagement/Views/Division/Index.cshtml
+++ b/DepartmentManagement/Views/Division/Index.cshtml
@@ -2,7 +2,7 @@
 
 <br />
 <br />
-<div class="border p-4 bg-white">
+<div class="p-4 bg-white">
     <div class="row">
         <div class="col-9">
             <h2 class="text-info"> Division </h2>
@@ -37,9 +37,15 @@
 
                             <div class="card-body">
                                 <h5>
-                                    CabinetNumber:
+                                    Cabinet number:
                                     <span>
                                         @item.CabinetNumber
+                                    </span>
+                                </h5>
+                                <h5>
+                                    Phone number:
+                                    <span>
+                                        @item.PhoneNumber
                                     </span>
                                 </h5>
                             </div>
