--- a/DepartmentManagement/Views/Department/Upsert.cshtml
+++ b/DepartmentManagement/Views/Department/Upsert.cshtml
@@ -54,6 +54,16 @@
 
             <div class="form-group row">
                 <div class="col-4">
+                    <label asp-for="EmailAddress"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="EmailAddress" class="form-control" />
+                    <span asp-validation-for="EmailAddress" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <div class="col-4">
                     <label asp-for="MainPhone"></label>
                 </div>
                 <div class="col-8">
