--- a/DepartmentManagement/Views/_ViewImports.cshtml
+++ b/DepartmentManagement/Views/_ViewImports.cshtml
@@ -2,5 +2,8 @@
 @using Models
 @using Models.ViewModels
 @using DepartmentManagement.Common
+@using ReflectionIT.Mvc.Paging
 
+@addTagHelper *, ReflectionIT.Mvc.Paging
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper DepartmentManagement.TagHelpers.*, DepartmentManagement.TagHelpers
