--- a/DepartmentManagement/Views/Employee/Index.cshtml
+++ b/DepartmentManagement/Views/Employee/Index.cshtml
@@ -8,10 +8,10 @@
         <input name="filter" class="form-control" placeholder="Введите фамилию сотрудника..." value="@Model.RouteValue["Filter"]" />
         <button type="submit" class="btn btn-success ml-1">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-            Search
+            Пойск
         </button>
         <a class="btn btn-danger ml-1" asp-action="Index">
-            <i class="fas fa-sync" style="font-size:1.3em;"></i>
+            Обновить
         </a>
     </form>
 
