--- a/DepartmentManagement/Views/Home/Index.cshtml
+++ b/DepartmentManagement/Views/Home/Index.cshtml
@@ -34,7 +34,7 @@
                     </div>
                 </a>
             </div>-->
-            <a asp-controller="Department" asp-action="Details" class="btn btn-outline-dark p-2 m-2" style="text-decoration:none;
+            @*<a asp-controller="Department" asp-action="Details" class="btn btn-outline-dark p-2 m-2" style="text-decoration:none;
                     box-shadow: 1px 1px 8px 0px rgba(0,0,0,0.71);" asp-route-id="@item.Id">
                 <div class="card text-black-50">
                     <h5 class="card-header">Department</h5>
@@ -53,7 +53,35 @@
                         </p>
                     </div>
                 </div>
-            </a>
+            </a>*@
+
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="card-title text-center">
+                        @item.Name
+                    </h5>
+                </div>
+                <div class="card-body">
+
+                    <p class="card-title">
+                        Город: @item.City
+                    </p>
+                    <p>
+                        Адрес: @item.Address
+                    </p>
+                    <p>
+                        Телефон: @item.MainPhone
+                    </p>
+                    <p>
+                        Эл.почта: @item.EmailAddress
+                    </p>
+
+                    <a asp-controller="Department" asp-action="Details" class="btn btn-primary p-2 m-2" style="text-decoration:none;
+                        box-shadow: 1px 1px 8px 0px rgba(0,0,0,0.71);" asp-route-id="@item.Id">
+                        Детали
+                    </a>
+                </div>
+            </div>
         }
     }
     else
