--- a/DepartmentManagement/Views/Position/Index.cshtml
+++ b/DepartmentManagement/Views/Position/Index.cshtml
@@ -35,7 +35,8 @@
                             <a class="btn btn-primary text-white" asp-action="Details" asp-route-Id="@item.Id">
                                 Details
                             </a>
-                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id">
+                            <a class="btn btn-danger text-white" asp-action="Delete" asp-route-Id="@item.Id"
+                               onclick="return confirm('Подтвердите удаление:')">
                                 Delete
                             </a>
                         </td>
